Add `q` parameter to genes/geo_accession for filtering
Also add content-range to response headers
